--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -15,7 +15,8 @@ library(ggplot2)
 
 1. 下載作業中有一個資料檔pp.csv，請將它引入R且資料名稱叫做pums以方便後續討論。[hint: 可使用environment視窗的Import Datasets選單按鍵，但記得把對應程式貼進作業檔]
 ```{r}
-
+library(readr)
+pums <- read_csv("https://raw.githubusercontent.com/shijaychou/Part-I-Assignment/my-HW/pp.csv")
 ```
 
 
@@ -23,15 +24,18 @@ library(ggplot2)
 
 2. 初步觀察wklywge與educ這兩個變數，你注意到什麼？可自由發揮所挔據的觀察，可以是統計量或是圖形。
 ```{r}
-
+model<-wklywge~educ
+out1<-lm(model,data=pums)
+summary(out1)
 ```
-
+發現edu對wage有顯著影響。
 
 > 我們只打算分析拿到高中學歷與大學學歷的薪資差異，令educ=12為高中學歷，而educ=16為大學學歷。
 
 3. 使用dplyr裡的filter()留下符合條件的樣本，且樣本取名為pums2。[Hint: 此題需要了解邏輯判斷程式規則，同學可以參考https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf裡的2.4節Logical vectors。要注意的是，要判斷是否educ為12，要寫成educ==12，而非educ=12]
 ```{r}
-
+pums %>% filter(educ == 12 | educ == 16) -> pums2
+pums2
 ```
 
 
@@ -40,7 +44,8 @@ library(ggplot2)
 
 4. 在pums2產生一個college虛擬變數，college為1若educ=16。接著檢視該變數的class。
 ```{r}
-
+pums2$college <- pums2$educ==16
+class(pums2$college)
 ```
 
 
@@ -48,27 +53,39 @@ library(ggplot2)
 
 5. 觀察pums2不同學歷下的平均薪資與其離散度，你發現什麼？
 ```{r}
-
+pums2 %>% group_by(college) %>% summarise(mean(wklywge),sd(wklywge))
 ```
-
+大學畢業錢比較多。
 6. 薪資研究多採用取對數轉換後的薪資，請產生取對數後的薪資變數，並取名為lwklywge。[Hint: 使用log()函數]
 ```{r}
-
+pums2$lwklywge <- log(pums2$wklywge)
 ```
 
 7. 請使用簡單迴歸來估計college對lwklywge的影響，並討論其顯著度。
 ```{r}
+model<-lwklywge~college
+out1<-lm(model,data=pums2)
 
+library(sandwich)
+library(lmtest)
+coeftest(out1,vcov=vcovHC(out1,type="HC0"))
 ```
-
+顯著度明顯。
 8. 考慮迴歸殘差的有異質變異，且此變異可以被college捕捉。請針對簡單迴歸模型進行FGLS估計。
 ```{r}
+library(nlme)
+pums2$predicted<-predict(out1)
+pums2$residuals<-residuals(out1)
+pums2 %>% ggplot(aes(x=college,y=(residuals)^2))+geom_point()
 
+out2<-gls(model,data=pums2,weights = varIdent(form = ~1| college))
+summary(out2)
 ```
 
 9. 針對上題的異質變異進行BP檢定。
 ```{r}
-
+bptest(model,data=pums2)
 ```
 
 10. 針對簡單迴歸模型，討論college係數可能有偏估的原因。[非電腦題，請用文字論述。]
+可能有遺漏變數造成偏誤。
