--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "第一次電腦作業"
-output: html_notebook
+output:
+  word_document: default
+  html_notebook: default
 ---
 作業除了讓同學檢視課堂所學程式外，有些題目只會給你未教過的函數建議（純為建議，你也可以不使用），你必需使用Help或網路查尋去了解函數的正確使用；搜詢正確程式函數使用的能力，也是程式設計的基本功。
 
@@ -11,11 +13,14 @@ output: html_notebook
 rm(list=ls())
 library(dplyr)
 library(ggplot2)
+library(psych)
 ```
 
 1. 下載作業中有一個資料檔pp.csv，請將它引入R且資料名稱叫做pums以方便後續討論。[hint: 可使用environment視窗的Import Datasets選單按鍵，但記得把對應程式貼進作業檔]
 ```{r}
-
+library(readr)
+pums <- read_csv("C:/Users/jason/Desktop/Part-I-Assignment/pp.csv")
+View(pums)
 ```
 
 
@@ -23,15 +28,37 @@ library(ggplot2)
 
 2. 初步觀察wklywge與educ這兩個變數，你注意到什麼？可自由發揮所挔據的觀察，可以是統計量或是圖形。
 ```{r}
-
+describe(pums)
 ```
 
+wkilwge的kurtosis為287.19由此可每周薪資為右偏，取對數使其恢復常態
+
+```{r}
+pums %>% ggplot(aes(x = educ,y = wklywge)) +
+  geom_point() -> f1
+f1
+```
+
+在X軸為教育年限，Y軸為每週薪資，可以看出不明顯的正相關。
+
+```{r}
+pums%>%ggplot(aes(x=educ))+geom_histogram()
+```
+
+多數人的教育年限為12，其次為16。
+```{r}
+out1 <- lm(wklywge~educ, pums)
+summary(out1)
+```
+
+教育年限的係數為27.746表示當教育年限提升，每週薪資也會相對提升。
 
 > 我們只打算分析拿到高中學歷與大學學歷的薪資差異，令educ=12為高中學歷，而educ=16為大學學歷。
 
 3. 使用dplyr裡的filter()留下符合條件的樣本，且樣本取名為pums2。[Hint: 此題需要了解邏輯判斷程式規則，同學可以參考https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf裡的2.4節Logical vectors。要注意的是，要判斷是否educ為12，要寫成educ==12，而非educ=12]
 ```{r}
-
+pums2 <- filter(pums, educ == 12 | educ == 16)
+pums2
 ```
 
 
@@ -40,7 +67,8 @@ library(ggplot2)
 
 4. 在pums2產生一個college虛擬變數，college為1若educ=16。接著檢視該變數的class。
 ```{r}
-
+pums2$college <- pums2$educ==16
+class(pums2$college)
 ```
 
 
@@ -48,27 +76,44 @@ library(ggplot2)
 
 5. 觀察pums2不同學歷下的平均薪資與其離散度，你發現什麼？
 ```{r}
-
+out2 <-summarise(group_by(pums2,college),sd(wklywge),mean(wklywge))
+out2
 ```
+
+5.1  擁有大學學歷的平均每週薪資高於擁有高中學歷所擁有的平均每週薪資
+5.2  擁有大學學的的薪資波動幅度大於擁有高中學歷的薪資波動幅度
 
 6. 薪資研究多採用取對數轉換後的薪資，請產生取對數後的薪資變數，並取名為lwklywge。[Hint: 使用log()函數]
 ```{r}
-
+pums2$lwklywge <- log(pums2$wklywge)
 ```
 
 7. 請使用簡單迴歸來估計college對lwklywge的影響，並討論其顯著度。
 ```{r}
+model <- lwklywge~college
+out3 <- lm(model,pums2)
+out3
+library(sandwich)
+library(lmtest)
+coeftest(out1,vcov=vcovHC(out1,type="HC0"))
 
 ```
 
+取LOG後使用簡單回歸所得到的係數為0.3843表示大學生擁有的每週薪資高於
+高中生所擁有的每週薪資程度。
+
 8. 考慮迴歸殘差的有異質變異，且此變異可以被college捕捉。請針對簡單迴歸模型進行FGLS估計。
 ```{r}
-
+library(nlme)
+out4 <- gls(model,pums2,weights = varIdent(form=~ 1 | college))
+summary(out4)
 ```
 
 9. 針對上題的異質變異進行BP檢定。
 ```{r}
-
+bptest(model,data=pums2)
 ```
 
 10. 針對簡單迴歸模型，討論college係數可能有偏估的原因。[非電腦題，請用文字論述。]
+教育年限偏估的原因，可能為遺漏了其他重要的變數。
+例如：父母親的社經地位或父母親的教育背景等，若單純只用教育年限估每週平均薪資，可能會造成係數偏誤的可能。
