--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -124,3 +124,6 @@ college係數可能有偏誤的原因是
 [答案有問題]
 我認為可能是college這個係數本身還可以再繼續細分下去，比如說台政清交等名校的畢業生賺的應該比其他學校多，所以college係數會產生偏差
 
+# LebronJamess
+1. 模型遺漏了重要變數，這是絕對的。例如家庭環境，它可能會影響你的人脈和資源的優渥，進而影響你的工作和薪資多寡。家庭環境好，有錢人更願意付錢讓自己的小孩更優秀，更多才多藝，甚至繼承家業。而家境不好的，平常無法累積才藝和語言能力，還要考慮到照顧家人和打工賺錢，無形之中就算學歷相同，未來的待遇也可能不同。
+2. 可能有交互作用，也就是薪資同樣影響學歷。我們可以知道薪資愈高的人能力大多相對愈高，當他的工作需要更多能力完善或需要更高的學歷的時候，有些人會選擇進修，相對於薪資低的工作或許更需要的是經驗累積而並非學歷，但創業者和公職人員不適用於此。
