Q10 answer from 林凱浩

--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -127,3 +127,6 @@ college係數可能有偏誤的原因是
 # LebronJamess
 1. 模型遺漏了重要變數，這是絕對的。例如家庭環境，它可能會影響你的人脈和資源的優渥，進而影響你的工作和薪資多寡。家庭環境好，有錢人更願意付錢讓自己的小孩更優秀，更多才多藝，甚至繼承家業。而家境不好的，平常無法累積才藝和語言能力，還要考慮到照顧家人和打工賺錢，無形之中就算學歷相同，未來的待遇也可能不同。
 2. 可能有交互作用，也就是薪資同樣影響學歷。我們可以知道薪資愈高的人能力大多相對愈高，當他的工作需要更多能力完善或需要更高的學歷的時候，有些人會選擇進修，相對於薪資低的工作或許更需要的是經驗累積而並非學歷，但創業者和公職人員不適用於此。
+
+# 林凱浩
+college係數偏估可能原因為遺漏重要解釋變數或遺漏的變數同時對教育年限及每周薪資皆有影響， 舉例:家庭背景的教育程度高可能導致資源獲取較多，進一步影響教育年限越高和每周薪資增加。
