--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -79,6 +79,9 @@ pums2 %>% group_by(college) %>% summarise(mean(wklywge),sd(wklywge))
 
 ## 大學學歷比高中學歷的周薪資更高，並且，大學學歷的薪資波動範圍也高於高中學歷，有更大的離離散度
 ```
+[鄭茹軒 @katie0527, 有清楚故事性，很讚。]
+唸完大學的平均薪資比唸完高中的平均薪資高。
+唸完大學的離散程度也比唸完高中的離散程度高，一項可能的原因為，高中畢業學的知識大家都差不多，所以工作出路相差程度比較不大，大學畢業有較專業的知識，所以唸完大學後的工作選擇比唸完高中的工作多，故其大學畢業薪資的離散程度也較高。
 
 6. 薪資研究多採用取對數轉換後的薪資，請產生取對數後的薪資變數，並取名為lwklywge。[Hint: 使用log()函數]
 ```{r}
