--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -118,6 +118,10 @@ bptest(model,data=pums2)
 
 10. 針對簡單迴歸模型，討論college係數可能有偏估的原因。[非電腦題，請用文字論述。]
 
+# 張夢芹 @changmengchin 
+[目前老師最喜歡的版本，A.3假設違反的兩個條件，清楚呈現在一個具有故事性的說理中。Good job!]
+本模型嘗試用教育程度解釋薪資，能上大學的人家境可能比較富裕，家境富裕者可能比較能提供家庭成員或子女必要的資源、人脈或經驗，進而影響工資。
+
 # eason19987
 由於college變數代表教育程度，但影響實質薪資的原因可能不只教育程度，像是人脈、個人特質以及語言能力皆可能影響實質薪資，因此如果只考慮college這個變數，則會導致係數出現偏誤。
 [光會影響實質薪資，並不一定會造成偏誤]
