--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -50,7 +50,7 @@ lm(wklywge~educ,pums)
 執行OLS估計後可以看出教育年限係數為27.75，故當教育程度越高則每週實質薪  資越高。
 
 ```{r}
-pums %>% ggplot(aes(x=educ,y=log(wklywge)))+geom_point() +geom_smooth(model=lm)
+pums %>% ggplot(aes(x=educ,y=log(wklywge)))+geom_point() +geom_smooth(method ="lm")
 ```
 使用geom_smooth來產生迴歸線。（魏敬萱）
 
