--- a/HW1.Rmd
+++ b/HW1.Rmd
@@ -24,14 +24,9 @@ pums <- read.csv("https://raw.githubusercontent.com/tpemartin/Part-I-Assignment/
 
 2. 初步觀察wklywge與educ這兩個變數，你注意到什麼？可自由發揮所挔據的觀察，可以是統計量或是圖形。
 ```{r}
-ggplot(pums, aes(x=educ, y=wklywge))+geom_point()
+ggplot(pums, aes(x=educ, y=wklywge))+geom_point()+geom_smooth()
 ```
-當X軸為教育程度，Y軸為每週實質薪資時，隱約看的出  一點正相關的感覺。
-
-```{r}
-ggplot(pums, aes(x=educ))+geom_histogram()
-```
-可以看到相當多人都具有高中學歷，其次才是大學學歷。
+當X軸為教育程度，Y軸為每週實質薪資時，可以看出有一點點正相關。
 
 ```{r}
 library(psych)
@@ -42,17 +37,12 @@ psych::describe(pums)
 ```{r}
 ggplot(pums, aes(x=log(wklywge)))+geom_histogram()
 ```
-原先不取對數時難以判別，取對數後發現稍稍呈現右偏分布。
+上圖可以看出每週薪資（wklywge）有明顯的右偏分配。
 
 ```{r}
 lm(wklywge~educ,pums)
 ```
-執行OLS估計後可以看出教育年限係數為27.75，故當教育程度越高則每週實質薪  資越高。
-
-```{r}
-pums %>% ggplot(aes(x=educ,y=log(wklywge)))+geom_point() +geom_smooth(method ="lm")
-```
-使用geom_smooth來產生迴歸線。（魏敬萱）
+我們用OLS估計出educ的係數為27.75，故可知當教育程度越高則每週實質薪資越高。
 
 > 我們只打算分析拿到高中學歷與大學學歷的薪資差異，令educ=12為高中學歷，而educ=16為大學學歷。
 
@@ -79,9 +69,6 @@ pums2 %>% group_by(college) %>% summarise(mean(wklywge),sd(wklywge))
 
 ## 大學學歷比高中學歷的周薪資更高，並且，大學學歷的薪資波動範圍也高於高中學歷，有更大的離離散度
 ```
-[鄭茹軒 @katie0527, 有清楚故事性，很讚。]
-唸完大學的平均薪資比唸完高中的平均薪資高。
-唸完大學的離散程度也比唸完高中的離散程度高，一項可能的原因為，高中畢業學的知識大家都差不多，所以工作出路相差程度比較不大，大學畢業有較專業的知識，所以唸完大學後的工作選擇比唸完高中的工作多，故其大學畢業薪資的離散程度也較高。
 
 6. 薪資研究多採用取對數轉換後的薪資，請產生取對數後的薪資變數，並取名為lwklywge。[Hint: 使用log()函數]
 ```{r}
@@ -118,27 +105,4 @@ bptest(model,data=pums2)
 
 10. 針對簡單迴歸模型，討論college係數可能有偏估的原因。[非電腦題，請用文字論述。]
 
-# 張夢芹 @changmengchin 
-[目前老師最喜歡的版本，A.3假設違反的兩個條件，清楚呈現在一個具有故事性的說理中。Good job!]
-本模型嘗試用教育程度解釋薪資，能上大學的人家境可能比較富裕，家境富裕者可能比較能提供家庭成員或子女必要的資源、人脈或經驗，進而影響工資。
-
-# eason19987
-由於college變數代表教育程度，但影響實質薪資的原因可能不只教育程度，像是人脈、個人特質以及語言能力皆可能影響實質薪資，因此如果只考慮college這個變數，則會導致係數出現偏誤。
-[光會影響實質薪資，並不一定會造成偏誤]
-
-# caiguoliang
-college係數可能有偏誤的原因是
-（1）模型可能遺漏了重要的解釋變數，如性別，性別可能會影響薪資，這樣性別就包含在簡單回歸的殘差項里，同時，性別也可能會影響教育，例如重男輕女、伊斯蘭保守嚴重的地區，女性的教育程度可能會比男性低，這樣，假設A.3就不成立，進而估計出來的college係數也可能是偏誤的
-（2）可能存在著內生性問題，薪資會受學歷影響，但反過來，我們不能排除學歷也可能會收到薪資的影響，比如一些家庭經濟條件較差的人，當他有較高的薪資后，會選擇進修，以提高自己的職場能力，進而會出現工資高的人，學歷也會更高的情況。這樣，殘差項與被解釋變數Y有關，X又收到Y影響，即X與殘差項會相關，即違反了假設A.3
-[答案有些問題，這個資料只有「男性」」
-
-# nijack89
-[答案有問題]
-我認為可能是college這個係數本身還可以再繼續細分下去，比如說台政清交等名校的畢業生賺的應該比其他學校多，所以college係數會產生偏差
-
-# LebronJamess
-1. 模型遺漏了重要變數，這是絕對的。例如家庭環境，它可能會影響你的人脈和資源的優渥，進而影響你的工作和薪資多寡。家庭環境好，有錢人更願意付錢讓自己的小孩更優秀，更多才多藝，甚至繼承家業。而家境不好的，平常無法累積才藝和語言能力，還要考慮到照顧家人和打工賺錢，無形之中就算學歷相同，未來的待遇也可能不同。
-2. 可能有交互作用，也就是薪資同樣影響學歷。我們可以知道薪資愈高的人能力大多相對愈高，當他的工作需要更多能力完善或需要更高的學歷的時候，有些人會選擇進修，相對於薪資低的工作或許更需要的是經驗累積而並非學歷，但創業者和公職人員不適用於此。
-
-# 林凱浩
-college係數偏估可能原因為遺漏重要解釋變數或遺漏的變數同時對教育年限及每周薪資皆有影響， 舉例:家庭背景的教育程度高可能導致資源獲取較多，進一步影響教育年限越高和每周薪資增加。
+一般而言在簡單迴歸中係數偏誤的原因主要有兩個，一個是存在內生性問題或是存在LDV。在這個模型中我認為應該是存在內生性問題，因此可以透過工具變數來解決內生性問題。
